aws-kops/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysqldb-svc
spec:
  type: NodePort
  ports:
    - port: 3306
  selector:
    app: mysqldb
