aws-kops/service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: my-user-service
spec:
  selector:
    app: my-user-app
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
